@@ -55,6 +55,8 @@ linkend="function-gdk--pixmap-create-from-data">gtk.gdk.pixmap_create_from_data<
 		       role="keyword">width</parameter></methodparam>
 	<methodparam><parameter
 		       role="keyword">height</parameter></methodparam>
+	<methodparam><parameter
+		       role="keyword">depth</parameter></methodparam>
 	<methodparam><parameter role="keyword">fg</parameter></methodparam>
 	<methodparam><parameter role="keyword">bg</parameter></methodparam>
       </methodsynopsis><methodsynopsis language="python">
@@ -220,8 +222,8 @@ the size specified by <parameter>width</parameter> and
 	  <term><parameter role="keyword">window</parameter>&nbsp;:</term>
 	  <listitem><simpara>a <link
 linkend="class-gdkwindow"><classname>gtk.gdk.Window</classname></link> used
-to determine default values for the new pixmap or <literal>None</literal> if
-<parameter>depth</parameter> is specified.</simpara></listitem>
+to determine default values for the new pixmap or <literal>None</literal>
+to use the root window.</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">data</parameter>&nbsp;:</term>
@@ -259,6 +261,18 @@ function returns a new bitmap of the size specified by
 
       <programlisting><methodsynopsis language="python">
 	  <methodname>gtk.gdk.pixmap_create_from_data</methodname>
+	  <methodparam><parameter
+			 role="keyword">window</parameter></methodparam>
+	  <methodparam><parameter
+			 role="keyword">data</parameter></methodparam>
+	  <methodparam><parameter
+			 role="keyword">width</parameter></methodparam>
+	  <methodparam><parameter
+			 role="keyword">height</parameter></methodparam>
+	  <methodparam><parameter
+			 role="keyword">depth</parameter></methodparam>
+	  <methodparam><parameter role="keyword">fg</parameter></methodparam>
+	  <methodparam><parameter role="keyword">bg</parameter></methodparam>
 	</methodsynopsis></programlisting>
       <variablelist>
 	<varlistentry>
@@ -267,6 +281,11 @@ function returns a new bitmap of the size specified by
 linkend="class-gdkwindow"><classname>gtk.gdk.Window</classname></link> used
 to determine default values for the new pixmap or <literal>None</literal> if
 <parameter>depth</parameter> is specified.</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term><parameter role="keyword">data</parameter>&nbsp;:</term>
+	  <listitem><simpara>the string containing the pixmap
+data.</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">width</parameter>&nbsp;:</term>
