@@ -3,6 +3,9 @@
 	* pygtk-gtkiconsource.xml Add gtk.icon_size_lookup_for_settings()
 	function.
 
+	* pygtk-gdkpixmap.xml Fix description and parameter list of 
+	gtk.pixmap_create_from_data() function.
+
 2004-04-13  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkexpander.xml Add.
